// common models

syntax = "proto3";
package emortal.model;

option java_package = "dev.emortal.api.model.common";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/proto-specs/gen/go/model/common";

enum ServerType {
  PROXY = 0;
  LOBBY = 1;
  MARATHON = 2;
  BLOCK_SUMO = 3;
  PARKOURTAG = 4;
  LAZERTAG = 5;
  HOLEY_MOLEY = 6;
  MARATHON_RACING = 7;
  BATTLE = 8;
  MINESWEEPER = 9;
}

message ConnectableServer {
  // Kubernetes pod name, e.g lobby-wgxtd-llffk
  string id = 1;
  string address = 2;
  uint32 port = 3;
}

// Pageable utilities
// NOTE: Page values start at 1, not 0
message Pageable {
  uint32 page = 1;
  uint32 size = 2;
}

message Sortable {
  string field = 1;
  bool ascending = 2;
}

message PageData {
  uint64 page = 1;
  uint32 size = 2;
  uint64 total_elements = 3;
  uint32 total_pages = 4;
}