syntax = "proto3";
package emortal.dev.api.messaging.general;

option java_package = "dev.emortal.api.messaging.general";
option java_multiple_files = true;
option go_package = "github.com/emortalmc/grpc-api-specs/gen/go/messaging/general";

import "server_discovery.proto";

message ProxyServerSwitchMessage {
  towerdefence.cc.service.server_discovery.ConnectableServer server = 1;
  repeated string player_ids = 2;
}
